--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,15 +10,17 @@
 
     {% for item in site.data.navigation %}
       {% if page.url == item.link %}
-        <div class="top-banner" >
-          <img class="top-image" style="position: absolute; z-index: 1;" src="{{ item.image | relative_url }}" alt="{{ item.title }}">
-          <div class="top-text"  style="position: absolute; z-index: 2; background-color: #0000006F; width: 100%; height: 100%; justify-items: center;">
+        <div class="top-banner" style="background-image: url('{{ item.image | relative_url }}'); background-size: cover; background-repeat: no-repeat;">
+          <div class="top-text"  style="position: absolute; z-index: 2; background-color: #0000006F; width: 100%;  justify-items: center; height: 100%; align-content: center;">
             <h1 style="max-width: 50%; font-size: xxx-large; font-family: Arial, Helvetica, sans-serif;">{{ item.title }}</h2>
+              <br>
             <p style="max-width: 50%; font-family: Arial, Helvetica, sans-serif;">{{ item.text }}</p>
             
           </div>
         </div>
-        <p style="font-family: Arial, Helvetica, sans-serif;">Photo: {{ item.description }}</p>
+        <div style="justify-items: center;">
+          <p style="font-family: Arial, Helvetica, sans-serif; color: black; padding-left: 10%; padding-right: 10%;">Photo: {{ item.description }}</p>
+        </div>
       {% endif %}
     {% endfor %}
 
