--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,26 +1,17 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-  </head>
-  <body>
-    <div style="position: absolute; z-index: 10; width: 100%;">{% include navigation.html %}</div>
-      <div class="top-banner" style="background-image: url('{{ page.top-image | relative_url }}'); ">
-        <div class="top-text"  style="position: absolute; z-index: 2; background-color: #0000002F; width: 100%;  justify-items: center; height: 100%; align-content: center;">
-          <h1 style="max-width: 70%; font-size: xx-large; font-family: Arial, Helvetica, sans-serif;">{{ page.title }}</h2>
-            <br>
-          <p style="max-width: 70%; font-family: Arial, Helvetica, sans-serif;">{{ page.text }}</p>
-        </div>
-      </div>
-      {% unless page.image-description == none %}
-        <div style="justify-items: center;">
-          <p style="font-family: Arial, Helvetica, sans-serif; color: black; padding-left: 10%; padding-right: 10%; text-align: center;">Photo: {{ page.image-description }}</p>
-        </div>
-      {% endunless %}
-    <div style="padding: 20px;">
-      {{ content }}
-    </div>
-  </body>
-</html>
+---
+layout: default
+---
+<div class="top-banner" style="background-image: url('{{ page.top-image | relative_url }}'); ">
+  <div class="top-text"  style="position: absolute; z-index: 2; background-color: #0000002F; width: 100%;  justify-items: center; height: 100%; align-content: center;">
+    <h1 style="max-width: 70%; font-size: xx-large; font-family: Arial, Helvetica, sans-serif;">{{ page.title }}</h2>
+      <br>
+    <p style="max-width: 70%; font-family: Arial, Helvetica, sans-serif;">{{ page.text }}</p>
+  </div>
+</div>
+{% unless page.image-description == none or page.image-description == "" %}
+  <div style="justify-items: center;">
+    <p style="font-family: Arial, Helvetica, sans-serif; color: black; padding-left: 10%; padding-right: 10%; text-align: center;">Photo: {{ page.image-description }}</p>
+  </div>
+{% endunless %}
+<div style="padding: 20px;">
+{{ content }}
