--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,26 +1,53 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-  </head>
-  <body>
-    <div style="position: absolute; z-index: 10; width: 100%;">{% include navigation.html %}</div>
-      <div class="top-banner" style="background-image: url('{{ page.top-image | relative_url }}'); ">
-        <div class="top-text"  style="position: absolute; z-index: 2; background-color: #0000002F; width: 100%;  justify-items: center; height: 100%; align-content: center;">
-          <h1 style="max-width: 70%; font-size: xx-large; font-family: Arial, Helvetica, sans-serif;">{{ page.title }}</h2>
-            <br>
-          <p style="max-width: 70%; font-family: Arial, Helvetica, sans-serif;">{{ page.text }}</p>
+---
+layout: default
+---
+<div class="top-banner" style="background-image: url('{{ page.top-image | relative_url }}'); aspect-ratio: 4 / 1">
+  <div class="top-text"
+    style="position: absolute; z-index: 2; background-color: #0000002F; width: 100%;  justify-items: center; height: 100%; align-content: center;">
+  </div>
+</div>
+{% unless page.image-description == none or page.image-description == "" %}
+<div style="justify-items: center;">
+  <p
+    style="font-family: Arial, Helvetica, sans-serif; color: black; padding-left: 10%; padding-right: 10%; text-align: center;">
+    Photo: {{ page.image-description }}</p>
+</div>
+{% endunless %}
+<div style="padding: 20px;">
+  <div style="display: flex;">
+    <div style="max-width: 75%; padding: 20px;">
+      <h1 style="text-align: center;">{{ page.title }}</h1>
+      <br>
+      <p style="text-align: center;">{{ page.date | date_to_string}}</p>
+      <button id="read-aloud" style="padding-left: 5px; padding-right: 5px;">🔊 Click to speak/cancel </button>
+      <br><br>
+      <div style="max-width: 80%; justify-self: center; text-align: justify;" id="content">{{ content }}</div>
+      <br><br>
+      <hr>
+      <div style="justify-items: center;">
+        <div style="display: flex; border-radius: 10px; max-width: fit-content; padding: 5px; align-items: center">
+          <img src="https://avatars.githubusercontent.com/u/109913135?v=4"
+            style="height: 70px; width: 70px; padding-right: 20px;" />
+          <div style="padding: 5px;">
+            <p style="font-weight: 700;">CJ-Lee01</p>
+            <div style="max-width: 700px; text-align: justify; ">
+              {% include me_description.html %}
+            </div>
+          </div>
         </div>
       </div>
-      {% unless page.image-description == none %}
-        <div style="justify-items: center;">
-          <p style="font-family: Arial, Helvetica, sans-serif; color: black; padding-left: 10%; padding-right: 10%; text-align: center;">Photo: {{ page.image-description }}</p>
-        </div>
-      {% endunless %}
-    <div style="padding: 20px;">
-      {{ content }}
+      <hr>
     </div>
-  </body>
-</html>
+    <hr style="width: 2px; height: auto;" />
+    <div style="max-width: 25%; padding: 20px;">
+      <h3>CJ-Lee01</h3>
+      {% include me_description.html %}
+      <hr><br>
+      <p>Recent Blogs</p>
+      {% for post in site.posts limit:5 %}
+      <a href={{post.url}}>{{post.title}}</a>
+      {% endfor %}
+    </div>
+  </div>
+  <script src="/assets/js/voice.js"></script>
+</div>
