--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,5 +13,6 @@ layout: default
     <p style="font-family: Arial, Helvetica, sans-serif; color: black; padding-left: 10%; padding-right: 10%; text-align: center;">Photo: {{ page.image-description }}</p>
   </div>
 {% endunless %}
-<div style="padding: 20px;">
+<div style="padding: 20px; width: 70%; align-self: center;">
 {{ content }}
+</div>
